Discussion CRUD implemented

--- a/gaming-catalog-app/src/app/core/discussion/discussion-details/discussion-details.component.html
+++ b/gaming-catalog-app/src/app/core/discussion/discussion-details/discussion-details.component.html
@@ -1,1 +1,42 @@
-<p>discussion-details works!</p>
+<div class="bg-gray-100 h-screen flex flex-col">
+    <main class="flex-grow p-4 overflow-y-auto">
+        <ul class="list-unstyled space-y-4" id="messagesList">
+            <!-- @foreach (var message in Model.Messages)
+            {
+            <div class="flex space-x-2">
+                <div class="flex-none">
+                    <span class="font-semibold">@message.SenderUsername</span>
+                    <span class="text-gray-500">@message.Timestamp</span>
+                </div>
+                <div class="flex-grow">
+                    <p>@message.Content</p>
+                </div>
+            </div>
+            } -->
+        </ul>
+    </main>
+    <footer class="bg-white p-4">
+        <form>
+            <!-- @Html.AntiForgeryToken() -->
+            <input type="text" id="userInput" value="@userName" disabled class="form-control mb-3" />
+            <input type="text" id="discussionInput" value="@discussionId" disabled class="form-control mb-3" />
+            <input type="text" id="messageInput" class="form-control mb-3 w-full border rounded p-2"
+                placeholder="Type your message..." />
+            <button type="button" class="bg-pink-600 text-white px-4 py-2 rounded" id="sendButton"
+                onclick="logMessage()">Send</button>
+        </form>
+    </footer>
+</div>
+
+<!-- <script>
+    function logMessage() {
+        console.log('Button clicked!');
+    }
+</script>
+
+
+@section Scripts
+{ -->
+<!-- <script src="~/lib/microsoft//signalr//dist/browser/signalr.js"></script>
+<script src="~/js/chat.js"></script>
+} -->
