--- a/gaming-catalog-app/src/app/core/guide/guide-item/guide-item.component.html
+++ b/gaming-catalog-app/src/app/core/guide/guide-item/guide-item.component.html
@@ -19,8 +19,8 @@
             </div>
 
             <div class="flex flex-row-reverse w-full">
-                <a asp-action="Details" asp-controller="Guide" asp-route-id="@Model.Id"
-                    class="!font-medium !text-blue-gray-900 !transition-colors hover:!text-pink-500">
+                <button (click)="getGameDetails(guide._id)" class=" !font-medium !text-blue-gray-900 !transition-colors
+                    hover:!text-pink-500">
                     <button
                         class="flex select-none items-center gap-2 rounded-lg py-2 px-4 text-center align-middle font-sans text-xs font-bold uppercase text-pink-500 transition-all hover:bg-pink-500/10 active:bg-pink-500/30 disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
                         type="button" data-ripple-dark="true">
@@ -31,7 +31,7 @@
                                 d="M17.25 8.25L21 12m0 0l-3.75 3.75M21 12H3"></path>
                         </svg>
                     </button>
-                </a>
+                </button>
             </div>
         </div>
     </div>
