--- a/gaming-catalog-app/src/app/core/discussion/discussion-all/discussion-all.component.html
+++ b/gaming-catalog-app/src/app/core/discussion/discussion-all/discussion-all.component.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="flex justfiy-center w-full">
             <div class="my-4">
-                <a href="/Discussion/CreateNew"
+                <a [routerLink]="['/Discussion/Create']"
                     class="bg-pink-600 text-white py-2 px-4 rounded-md hover:bg-pink-700">Create Discussion</a>
             </div>
         </div>
@@ -20,19 +20,13 @@
         <div class="flex flex-col-reverse h-full">
             <!-- <partial name="_PaginationPartial" model="@Model.PageViewModel" /> -->
         </div>
-        <div class="w-full flex flex-row flex-wrap justify-content-center">
-            <!-- @foreach (var viewModel in Model.ViewModels)
-            {
-            <partial name="_DiscussionPartial" model="viewModel" />
-            } -->
-            <app-discussion-item />
-            <app-discussion-item />
-            <app-discussion-item />
+        <div *ngFor="let discussion of discussions" class="w-full flex flex-row flex-wrap justify-content-center">
+            <app-discussion-item [discussion]="discussion" />
         </div>
         <!-- }
         else
         { -->
-        <p>There are no Discussions available.</p>
+        <!-- <p>There are no Discussions available.</p> -->
         <!-- } -->
     </div>
 </body>
