--- a/gaming-catalog-app/src/app/app.component.html
+++ b/gaming-catalog-app/src/app/app.component.html
@@ -58,13 +58,17 @@
         <span class="mx-4 font-medium">Settings</span>
       </a>
 
-      <div *ngIf="!isLoggedIn">
-        <a [routerLink]="['/Login']">Login</a>
-        <a [routerLink]="['/Register']">Register</a>
+      <div *ngIf="!isLoggedIn" class="space-x-4">
+        <a [routerLink]="['/Login']"
+          class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-700 transition-colors duration-300">Login</a>
+        <a [routerLink]="['/Register']"
+          class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-700 transition-colors duration-300">Register</a>
       </div>
       <div *ngIf="isLoggedIn">
-        <button (click)="logout()">Logout</button>
+        <button (click)="logout()"
+          class="bg-red-500 text-white px-4 py-2 rounded hover:bg-red-700 transition-colors duration-300">Logout</button>
       </div>
+
     </nav>
   </aside>
 
