--- a/gaming-catalog-app/src/app/core/discussion/discussion-item/discussion-item.component.html
+++ b/gaming-catalog-app/src/app/core/discussion/discussion-item/discussion-item.component.html
@@ -9,17 +9,14 @@
         </p>
     </div>
     <div class="p-6 pt-0">
-        <a (click)="getDiscussionDetails(discussion._id)"
+        <a *ngIf="authService.isUser()" (click)="getDiscussionDetails(discussion._id)"
             class="select-none rounded-lg bg-pink-500 py-3 px-6 text-center align-middle font-sans text-xs font-bold uppercase text-white shadow-md shadow-pink-500/20 transition-all hover:shadow-lg hover:shadow-pink-500/40 focus:opacity-[0.85] focus:shadow-none active:opacity-[0.85] active:shadow-none disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
             data-ripple-light="true" asp-controller="Discussion" asp-action="Details" asp-route-id="@Model.Id">
             Read More
         </a>
     </div>
-    <!-- @if (isAdmin)
-    { -->
     <button *ngIf="authService.isAdmin()" (click)="deleteDiscussion(discussion._id)"
         class="bg-pink-600 text-white hover:bg-pink-700 px-3 py-2 rounded">
         <i class="fa-solid fa-trash"></i>
     </button>
-    <!-- } -->
 </div>
