--- a/gaming-catalog-app/src/app/core/guide/guide-item/guide-item.component.html
+++ b/gaming-catalog-app/src/app/core/guide/guide-item/guide-item.component.html
@@ -18,7 +18,7 @@
                 {{guide.language}}
             </div>
 
-            <div class="flex flex-row-reverse w-full">
+            <div *ngIf="authService.isUser()" class=" flex flex-row-reverse w-full">
                 <button (click)="getGameDetails(guide._id)" class=" !font-medium !text-blue-gray-900 !transition-colors
                     hover:!text-pink-500">
                     <button
