--- a/gaming-catalog-app/src/app/shared/components/game-item/game-item.component.html
+++ b/gaming-catalog-app/src/app/shared/components/game-item/game-item.component.html
@@ -52,7 +52,7 @@
         </div>
     </div>
     <div class="p-6 pt-3">
-        <button (click)="getGameDetails(game._id)"
+        <button *ngIf="authService.isUser()" (click)="getGameDetails(game._id)"
             class="block w-full select-none rounded-lg bg-pink-500 py-3.5 px-7 text-center align-middle font-sans text-sm font-bold uppercase text-white shadow-md shadow-pink-500/20 transition-all hover:shadow-lg hover:shadow-pink-500/40 focus:opacity-[0.85] focus:shadow-none active:opacity-[0.85] active:shadow-none disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
             type="button" data-ripple-light="true">
             Details
